--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		<button type="button" class="button_exercise" data-exercise="1">Упражнение 1</button>
 		<button type="button" class="button_exercise"  data-exercise="2">Упражнение 2</button>
 		<div class="exercise-out" style="height: 500px;"></div>
-		<button type="button" class="button-next">Далее</button>
-		<button type="button" class="button-prev">Назад</button>
+		<button type="button" class="button-direction" data-direction="next">Далее</button>
+		<button type="button" class="button-direction" data-direction="prev">Назад</button>
 	</main>
 	<footer></footer>
 	<script src="exercises/exercise_1.js"></script>
